git-svn-id: http://svn.coderepos.org/share/lang/gauche/oldtype/trunk@8211 d0d07461-0603-4401-acd4-de1884942a52

--- a/src/Makefile
+++ b/src/Makefile
@@ -18,7 +18,4 @@ test:
 
 svninfo:
 	svn --xml info ${OTSAMPLE} > info.xml
-	./oldtype_svninfo shell < info.xml
-
-t:
-	./oldtype_svninfo shell < /tmp/t.xml
+	gosh -I ../Kahua/oldtype ./oldtype_svninfo shell < info.xml
