Supported ##(timestamp utc) and #(since utc) command. Supported timezone of !RecentPages's date.
git-svn-id: http://svn.coderepos.org/share/lang/gauche/oldtype/trunk@8607 d0d07461-0603-4401-acd4-de1884942a52

--- a/Kahua/oldtype/Makefile
+++ b/Kahua/oldtype/Makefile
@@ -35,7 +35,7 @@ KAHUA_LIB     = $(libdir)
 KAHUACONFIG =  -S /home/kiyoka/work/site-unstable
 
 TEST_DIR    = $(PWD)
-SCRIPTFILES = $(package)/$(package).kahua $(package)/version.kahua $(package)/util.kahua $(package)/format.scm $(package)/kahualib.scm $(package)/parse.scm $(package)/util.scm
+SCRIPTFILES = $(package)/$(package).kahua $(package)/version.kahua $(package)/util.kahua $(package)/format.scm $(package)/kahualib.scm $(package)/parse.scm $(package)/util.scm $(package)/pasttime.scm
 STATICFILES = $(package)/$(package).css $(package)/staticimg/*.png $(package)/*.el $(package)/import/*.js  $(package)/$(package).js
 
 SOURCEDIR   = $(package)
