--- a/Kahua/oldtype/Makefile
+++ b/Kahua/oldtype/Makefile
@@ -36,7 +36,7 @@ KAHUACONFIG =  -S /home/kiyoka/work/site-unstable
 
 TEST_DIR    = $(PWD)
 SCRIPTFILES = $(package)/$(package).kahua $(package)/version.kahua $(package)/util.kahua $(package)/format.scm $(package)/kahualib.scm $(package)/parse.scm $(package)/util.scm $(package)/pasttime.scm
-STATICFILES = $(package)/$(package).css $(package)/staticimg/*.png $(package)/*.el $(package)/import/*.js  $(package)/$(package).js
+STATICFILES = $(package)/$(package).css $(package)/staticimg/*.png $(package)/*.el $(package)/import/*.js $(package)/import/*.css $(package)/$(package).js
 
 SOURCEDIR   = $(package)
 PLUGINDIR   = plugins
