Supported serialize and deserialize internal data by <oldtype-page> type.
git-svn-id: http://svn.coderepos.org/share/lang/gauche/oldtype/trunk@12266 d0d07461-0603-4401-acd4-de1884942a52

--- a/src/Makefile
+++ b/src/Makefile
@@ -7,14 +7,15 @@ all: log.txt ann.txt
 	gosh -I ../Kahua/oldtype ./oldtype_to sxml      ${OTSAMPLE} > out.sxml
 	gosh -I ../Kahua/oldtype ./oldtype_to plain     ${OTSAMPLE} > out.txt
 
+test: log.txt ann.txt
+	gosh -I ../Kahua/oldtype test.scm  ${OTSAMPLE} log.txt ann.txt > test.log
+
 log.txt:
 	svn --xml log ../ > log.txt
 
 ann.txt:
 	svn ann ${OTSAMPLE} > ann.txt
 
-test:
-	@cat ${OTSAMPLE} | gosh -I ../lib test.scm
 
 svninfo:
 	svn --xml info ${OTSAMPLE} > info.xml
