Supported plain text layouter.
git-svn-id: http://svn.coderepos.org/share/lang/gauche/oldtype/trunk@14228 d0d07461-0603-4401-acd4-de1884942a52

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,12 +2,14 @@
 
 OTSAMPLE='../edit/Test.ot'
 
-all: log.txt  Test.ann.txt  Entry1.ann.txt  Entry2.ann.txt 
+all: log.txt  Test.ann.txt  Entry1.ann.txt  Entry2.ann.txt
 	gosh -I ../Kahua/oldtype ./oldtype_to internal  ../edit/Test.ot    log.txt Test.ann.txt    > Test.sexp
 	gosh -I ../Kahua/oldtype ./oldtype_to internal  ../edit/Entry1.ot  log.txt Entry1.ann.txt  > Entry1.sexp
 	gosh -I ../Kahua/oldtype ./oldtype_to internal  ../edit/Entry2.ot  log.txt Entry2.ann.txt  > Entry2.sexp
-	gosh -I ../Kahua/oldtype ./oldtype_to sxml      ${OTSAMPLE} > out.sxml
-	gosh -I ../Kahua/oldtype ./oldtype_to plain     ${OTSAMPLE} > out.txt
+	gosh -I ../Kahua/oldtype ./oldtype_to sxml      ../edit/Sample1.ot > Sample1.sxml
+	gosh -I ../Kahua/oldtype ./oldtype_to sxml      ../edit/Sample2.ot > Sample2.sxml
+	gosh -I ../Kahua/oldtype ./oldtype_to plain     ../edit/Sample1.ot > Sample1.txt
+	gosh -I ../Kahua/oldtype ./oldtype_to plain     ../edit/Sample2.ot > Sample2.txt
 
 test: log.txt Test.ann.txt
 	gosh -I ../Kahua/oldtype test.scm  ${OTSAMPLE} log.txt Test.ann.txt > test.log
