--- a/src/Makefile
+++ b/src/Makefile
@@ -4,6 +4,7 @@ OTSAMPLE='../edit/Test.ot'
 
 all: log.txt  Test.ann.txt  Entry1.ann.txt  Entry2.ann.txt
 	gosh -I ../Kahua/oldtype ./oldtype_to internal  ../edit/Test.ot    log.txt Test.ann.txt    > Test.sexp
+	gosh -I ../Kahua/oldtype ./oldtype_to internal  ../edit/Test.ot                            > Test.no-timeline.sexp
 	gosh -I ../Kahua/oldtype ./oldtype_to internal  ../edit/Entry1.ot  log.txt Entry1.ann.txt  > Entry1.sexp
 	gosh -I ../Kahua/oldtype ./oldtype_to internal  ../edit/Entry2.ot  log.txt Entry2.ann.txt  > Entry2.sexp
 	gosh -I ../Kahua/oldtype ./oldtype_to sxml      ../edit/Sample1.ot > Sample1.sxml
