Supported 'Related pages:' feature.
git-svn-id: http://svn.coderepos.org/share/lang/gauche/oldtype/trunk@22567 d0d07461-0603-4401-acd4-de1884942a52

--- a/src/Makefile
+++ b/src/Makefile
@@ -31,6 +31,8 @@ Entry1.ann.txt: ../edit/Entry1.ot
 Entry2.ann.txt: ../edit/Entry2.ot
 	svn ann ../edit/Entry2.ot  > Entry2.ann.txt
 
+reftest:
+	gosh -I ../Kahua/oldtype ../command/genref /Users/kiyoka/work/site-unstable
 
 svninfo:
 	svn --xml info ${OTSAMPLE} > info.xml
