--- a/src/Makefile
+++ b/src/Makefile
@@ -32,7 +32,8 @@ Entry2.ann.txt: ../edit/Entry2.ot
 	svn ann ../edit/Entry2.ot  > Entry2.ann.txt
 
 reftest:
-	gosh -I ../Kahua/oldtype ../command/genref /Users/kiyoka/work/site-unstable
+	gosh -I ../Kahua/oldtype ../command/pagerank /Users/kiyoka/work/site-unstable
+#	gosh -I ../Kahua/oldtype ../command/genref   /Users/kiyoka/work/site-unstable
 
 svninfo:
 	svn --xml info ${OTSAMPLE} > info.xml
