Moved RSS related code to oldtype-rss.kahua
git-svn-id: http://svn.coderepos.org/share/lang/gauche/oldtype/trunk@24660 d0d07461-0603-4401-acd4-de1884942a52

--- a/Kahua/oldtype/Makefile
+++ b/Kahua/oldtype/Makefile
@@ -36,7 +36,8 @@ KAHUACONFIG =  -S /home/kiyoka/work/site-unstable
 
 TEST_DIR    = $(PWD)
 SCRIPTFILES = \
-	$(package)/$(package).kahua $(package)/version.kahua $(package)/util.kahua $(package)/format.scm $(package)/core.scm \
+	$(package)/$(package).kahua $(package)/version.kahua $(package)/util.kahua $(package)/oldtype-rss.kahua \
+	$(package)/format.scm $(package)/core.scm \
 	$(package)/parse.scm $(package)/util.scm $(package)/pasttime.scm $(package)/page.scm $(package)/timeline.scm \
 	$(package)/log.scm $(package)/svn.scm
 STATICFILES = $(package)/$(package).css $(package)/staticimg/*.png $(package)/staticimg/*.gif $(package)/*.el $(package)/import/*.js $(package)/import/*.css $(package)/$(package).js
